--- a/auto-generated-workspace.html
+++ b/auto-generated-workspace.html
@@ -5,7 +5,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-    <title>Workspace / grbl</title>
+    <title>Workspace / expanded to support xy touchplate zeroing</title>
 
     <!-- ChiliPeppr is based on bootstrap CSS. -->
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
@@ -204,7 +204,7 @@ cpdefine("inline:com-chilipeppr-workspace-sparkys-grbl", ["chilipeppr_ready"], f
          * The ID of the widget. You must define this and make it unique.
          */
         id: "com-chilipeppr-workspace-sparkys-grbl", // Make the id the same as the cpdefine id
-        name: "Workspace / grbl", // The descriptive name of your widget.
+        name: "Workspace / expanded to support xy touchplate zeroing", // The descriptive name of your widget.
         desc: `A ChiliPeppr Workspace grbl.`,
         url: "http://raw.githubusercontent.com/SparkysWidgets/workspace-grbl/master/auto-generated-workspace.html", // The final URL of the working widget as a single HTML file with CSS and Javascript inlined. You can let runme.js auto fill this if you are using Cloud9.
         fiddleurl: "http://ide.c9.io/sparkyswidgets/sparkys-grbl", // The edit URL. This can be auto-filled by runme.js in Cloud9 if you'd like, or just define it on your own to help people know where they can edit/fork your widget
