Made some changes to ChiliPeppr myWorkspace using Cloud9

--- a/auto-generated-workspace.html
+++ b/auto-generated-workspace.html
@@ -1783,6 +1783,8 @@ cpdefine("inline:com-chilipeppr-workspace-sparkys-grbl", ["chilipeppr_ready"], f
                             <button type="button" class="btn btn-xs btn-default shuttlexpress-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="ShuttleXpress Jog Dial." data-trigger="hover" data-delay="100">ShuttleXpress</button>
                             <button type="button" class="btn btn-xs btn-default touchplate-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="Use a touch plate to easily figure out your Z zero of your workpiece and set it." data-trigger="hover"
                             data-delay="100">Touch Plate</button>
+                            <button type="button" class="btn btn-xs btn-default touchplatex-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="Use a touch plate to easily figure out your X zero of your workpiece and set it." data-trigger="hover"
+                            data-delay="100">Touch Plate</button>
                             <!-- </div>
                         <div class="btn-group"> -->
                             <!-- </div> -->
