--- a/workspace.html
+++ b/workspace.html
@@ -80,7 +80,7 @@
                             <button type="button" class="btn btn-xs btn-default touchplate-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="Use a touch plate to easily figure out your Z zero of your workpiece and set it." data-trigger="hover"
                             data-delay="100">Touch Plate</button>
                             <button type="button" class="btn btn-xs btn-default touchplatex-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="Use a touch plate to easily figure out your X zero of your workpiece and set it." data-trigger="hover"
-                            data-delay="100">Touch Plate</button>
+                            data-delay="100">Touch PlateX</button>
                             <!-- </div>
                         <div class="btn-group"> -->
                             <!-- </div> -->
