--- a/auto-generated-workspace.html
+++ b/auto-generated-workspace.html
@@ -1808,7 +1808,7 @@ cpdefine("inline:com-chilipeppr-workspace-sparkys-grbl", ["chilipeppr_ready"], f
 
                     <!-- Touch Plate -->
                     <div class="zhigh hidden" id="com-chilipeppr-ws-touchplate">Touch Plate Here</div>
-
+                    <div class="zhigh hidden" id="com-chilipeppr-ws-touchplatex">Touch PlateX Here</div>
                     <!-- Gcode List -->
                     <div id="com-chilipeppr-gcode-list" class="zhigh">Load Gcode List Here</div>
                     <!-- Serial In/Out Text Log-->
