Made some changes to ChiliPeppr myWorkspace using Cloud9

--- a/auto-generated-workspace.html
+++ b/auto-generated-workspace.html
@@ -1847,6 +1847,8 @@ cpdefine("inline:com-chilipeppr-workspace-sparkys-grbl", ["chilipeppr_ready"], f
                             data-delay="100">Touch Plate</button>
                             <button type="button" class="btn btn-xs btn-default touchplatex-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="Use a touch plate to easily figure out your X zero of your workpiece and set it." data-trigger="hover"
                             data-delay="100">Touch PlateX</button>
+                             <button type="button" class="btn btn-xs btn-default touchplatey-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="Use a touch plate to easily figure out your Y zero of your workpiece and set it." data-trigger="hover"
+                            data-delay="100">Touch PlateY</button>
                             <!-- </div>
                         <div class="btn-group"> -->
                             <!-- </div> -->
@@ -1871,6 +1873,7 @@ cpdefine("inline:com-chilipeppr-workspace-sparkys-grbl", ["chilipeppr_ready"], f
                     <!-- Touch Plate -->
                     <div class="zhigh hidden" id="com-chilipeppr-ws-touchplate">Touch Plate Here</div>
                     <div class="zhigh hidden" id="com-chilipeppr-ws-touchplatex">Touch PlateX Here</div>
+                    <div class="zhigh hidden" id="com-chilipeppr-ws-touchplatey">Touch PlateY Here</div>
                     <!-- Gcode List -->
                     <div id="com-chilipeppr-gcode-list" class="zhigh">Load Gcode List Here</div>
                     <!-- Serial In/Out Text Log-->
