--- a/workspace.html
+++ b/workspace.html
@@ -81,6 +81,8 @@
                             data-delay="100">Touch Plate</button>
                             <button type="button" class="btn btn-xs btn-default touchplatex-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="Use a touch plate to easily figure out your X zero of your workpiece and set it." data-trigger="hover"
                             data-delay="100">Touch PlateX</button>
+                             <button type="button" class="btn btn-xs btn-default touchplatey-button" data-container="body" data-toggle="popover" data-placement="auto" data-content="Use a touch plate to easily figure out your Y zero of your workpiece and set it." data-trigger="hover"
+                            data-delay="100">Touch PlateY</button>
                             <!-- </div>
                         <div class="btn-group"> -->
                             <!-- </div> -->
@@ -105,6 +107,7 @@
                     <!-- Touch Plate -->
                     <div class="zhigh hidden" id="com-chilipeppr-ws-touchplate">Touch Plate Here</div>
                     <div class="zhigh hidden" id="com-chilipeppr-ws-touchplatex">Touch PlateX Here</div>
+                    <div class="zhigh hidden" id="com-chilipeppr-ws-touchplatey">Touch PlateY Here</div>
                     <!-- Gcode List -->
                     <div id="com-chilipeppr-gcode-list" class="zhigh">Load Gcode List Here</div>
                     <!-- Serial In/Out Text Log-->
